CustomObjects/objects/invoiceit_s__Product_Rate_Plan_Charge_Tier__c.object
<CustomObject>
    <customHelpPage>invoiceit_s__support</customHelpPage>
    <description>This holds the tiered pricing details for the Charge.</description>
    <fields>
        <fullName>invoiceit_s__End_Unit__c</fullName>
        <inlineHelpText>The Start and End Units are both inclusive for calculation.</inlineHelpText>
        <label>End Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product_Rate_Plan_Charge__c</fullName>
        <label>Product Rate Plan Charge</label>
        <referenceTo>invoiceit_s__Product_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Product Rate Plan Charge Tiers</relationshipLabel>
        <relationshipName>Product_Rate_Plan_Charge_Tiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Start_Unit__c</fullName>
        <inlineHelpText>The Start and End Units are both inclusive for calculation.</inlineHelpText>
        <label>Start Unit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Unit_Cost_Price__c</fullName>
        <label>Unit Cost Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Product Rate Plan Charge Tier</label>
    <nameField>
        <displayFormat>TIER-{0000}</displayFormat>
        <label>Tier Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Rate Plan Charge Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>invoiceit_s__Cannot_create_for_non_tiered_charges</fullName>
        <active>false</active>
        <errorConditionFormula>false</errorConditionFormula>
        <errorMessage>Tiered pricing can only be created for Product Rate Plan Charges whose price format is &apos;Tiered&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__Start_and_end_unit_cannot_be_0</fullName>
        <active>false</active>
        <description>Start unit &amp; end_unit_should_be_greater_&gt;_0</description>
        <errorConditionFormula>invoiceit_s__End_Unit__c &lt; 1 ||  invoiceit_s__Start_Unit__c &lt; 1</errorConditionFormula>
        <errorMessage>Start and End unit should be greater than zero</errorMessage>
    </validationRules>
</CustomObject>